test/files/neg/warn-unused-implicits.check
warn-unused-implicits.scala:13: warning: parameter value s in method f is never used
       )(implicit s: String): Int = {  // warn
                  ^
warn-unused-implicits.scala:33: warning: parameter value s in method i is never used
  def i(implicit s: String, t: Int) = t           // yes, warn
                 ^
error: No warnings can be incurred under -Werror.
two warnings found
one error found
